--- a/docs/u-cv625.md
+++ b/docs/u-cv625.md
@@ -1,4 +1,5 @@
-# u-cv625
+# u-cv625 - HIST2 Ensemble Member 2
 
-* 19620101
-  storm_analysis exceeded time limit - rerun and extended to 3HR
+| Cycle | Task | Comment / Issue | Action |
+| ---   | ---  | ---             | ---    |
+| 19620101 | storm_analysis | exceeded time limit | rerun and timelimit extended to 3HR |
