--- a/docs/u-cw342.md
+++ b/docs/u-cw342.md
@@ -1,4 +1,4 @@
-# u-cw342 - HIST2 Ensemble Member <insert ens member num>
+# u-cw342 - HIST2 Ensemble Member 09
 
 **Runner:**  
 **Run Start Date:**
