--- a/docs/u-cv608.md
+++ b/docs/u-cv608.md
@@ -1,1 +1,13 @@
+# u-cv608 - HIST2 Ensemble Member 03
+
+**Runner:**  Grenville
+
+**Run Start Date:** 22nd March 2023
+
+**General Comments:** 
 Discovered an error in modify_netcdf_metadata that resulted in ocean files not getting correct metadata updates (missing cell_measures, cell methods) - fixing metadata for files on ET is quite difficult, so this suite will continue to run as is and another copy will be started that has correct metadata. If both suites give bit comparible results, u-cv608 will be stopped.
+
+| Cycle | Task | Comment / Issue | Action |
+| ---   | ---  | ---             | ---    |
+
+
