--- a/docs/u-cw345.md
+++ b/docs/u-cw345.md
@@ -1,1 +1,12 @@
-copy of u-cv608 with ocean metadata fix
+# u-cw345 - HIST2 Ensemble Member 03
+
+**Runner:**  Grenville
+
+**Run Start Date:** 21st April 2023
+
+**Notes:** Copy of [u-cv608](u-cv608) with ocean metadata fix
+
+| Cycle | Task | Comment / Issue | Action |
+| ---   | ---  | ---             | ---    |
+
+
