--- a/docs/u-cv830.md
+++ b/docs/u-cv830.md
@@ -1,8 +1,15 @@
-# u-cv830
+# u-cv830 - HIST2 Ensemble Member 04
 
-* 19500101
-  storm_analysis failed due to deleted pt files. Forgot to add graph fix to suite.rc, now fixed.
-* 19531001
-  monitor task failed because 1 file (cv830i_4_mon_19531001-19531101.nc) had incorrect metadata which caused the file aggregation to not work correctly. The file metadata should have been updated by the modify_netcdf_metadata task but it didn't work correctly. Archer2 was having problems at the time so that was probably what caused the error to happen.
-* 19580101
-  Run abandoned because of a problem writing ocean metadata in modify_netcdf_metadata task, rerun from begining in suite u-cw356
+**Runner:**  Jeff
+
+**Run Start Date:** 30th March 2023
+
+**Notes:** Run abandoned because of a problem writing ocean metadata in modify_netcdf_metadata task, rerun from begining in suite [u-cw356](u-cw356)
+
+| Cycle | Task | Comment / Issue | Action |
+| ---   | ---  | ---             | ---    |
+| 19500101 | storm_analysis | storm_analysis failed due to deleted pt files. Forgot to add graph fix to suite.rc | Now fixed |
+| 19531001 | monitor | task failed because 1 file (cv830i_4_mon_19531001-19531101.nc) had incorrect metadata which caused the file aggregation to not work correctly. The file metadata should have been updated by the modify_netcdf_metadata task but it didn't work correctly. Archer2 was having problems at the time so that was probably what caused the error to happen. | - |
+| 19580101 | - | Run abandoned because of a problem writing ocean metadata in modify_netcdf_metadata task, rerun from begining in suite u-cw356 | Run Terminated |
+
+
