Update following a2 os upgrade

--- a/docs/u-cv976.md
+++ b/docs/u-cv976.md
@@ -3,5 +3,8 @@
 **Runner:** Rosalyn Hatcher   
 **Run Start Date:** 
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| 19941001T0000Z | -    | Last completed cycle before ARCHER2 OS Upgrade | | |
+|       |      |     |   |  |
