--- a/docs/u-cv976.md
+++ b/docs/u-cv976.md
@@ -1,10 +1,10 @@
 # u-cv976 - HIST2 Ensemble Member 06
 
 **Runner:** Rosalyn Hatcher   
-**Run Start Date:** 
+**Run Start Date:** 07 April 2023
 
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| 19990401T0000Z | -    | Last completed cycle before ARCHER2 OS Upgrade | | |
-|       |      |     |   |  |
+| 19990401T0000Z | -    | Last completed coupled cycle before ARCHER2 OS Upgrade | Suite Paused | 18.05.23 |
+| 19990701T0000Z | -    | Suite updated as per os upgrade instructions   | Suite Restarted | 03.07.23 |
