--- a/docs/u-cv625.md
+++ b/docs/u-cv625.md
@@ -1,8 +1,10 @@
 # u-cv625 - HIST2 Ensemble Member 2
 
 **Runner:** Rosalyn Hatcher   
-**Run Start Date:** 23/03/2023
-**Run Completion Date: ** 13/05/23
+**Run Start Date:** 23/03/2023  
+**Run Completion Date:** 13/05/23
+
+### Notes/Events
 
 | Cycle | Task | Comment / Issue | Action |
 | ---   | ---  | ---             | ---    |
