--- a/docs/u-cw345.md
+++ b/docs/u-cw345.md
@@ -1,12 +1,20 @@
 # u-cw345 - HIST2 Ensemble Member 03
 
-**Runner:**  Grenville
+**Runner:**  Grenville Lister
 
-**Run Start Date:** 21st April 2023
+**Run Start Date:** 21st April 2023  
+**Run Completion Date:**
 
-**Notes:** Copy of [u-cv608](u-cv608) with ocean metadata fix
+**General Notes:** Copy of [u-cv608](u-cv608) with ocean metadata fix
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+### Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| -     |      |       |       |      |
+
+### JDMA Batch Numbers
+
+<Add output from running `jdma batch | grep u-cw345` when run completed>
 
 
