Setup page layout

--- a/docs/u-cw356.md
+++ b/docs/u-cw356.md
@@ -1,7 +1,15 @@
 # u-cw356 - HIST2 Ensemble Member 04
 
-**Runner:**  Jeff 
-**Run Start Date:** 
+**Runner:**  Jeff Cole  
+**Run Start Date:** 24th April 2023  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+### Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| placeholder    |    |    |    |    |
+
+### JDMA Batch Numbers
+
+<Add output from running `jdma batch | grep u-cw356` when run completed>
