--- a/docs/u-cw345.md
+++ b/docs/u-cw345.md
@@ -11,7 +11,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| -     |      |       |       |      |
+| placeholder |      |       |       |      |
 
 ### JDMA Batch Numbers
 
