--- a/docs/u-cv827.md
+++ b/docs/u-cv827.md
@@ -1,8 +1,15 @@
 # u-cv827 - HIST2 Ensemble Member 05
 
-**Runner:**  Dan
+**Runner:**  Dan Hodson  
+**Run Start Date:**  19th April 2023  
+**Run Completion Date:**
 
-**Run Start Date:**  19th April 2023
+### Events/Notes
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---- |
+| <placeholder>|   |          |     |    |
+
+### JDMA Batch Numbers
+
+<Add output from running `jdma batch | grep u-cv827` when run completed>
