--- a/docs/u-cw083.md
+++ b/docs/u-cw083.md
@@ -1,7 +1,14 @@
 # u-cw083 - HIST2 Ensemble Member 07
 
-**Runner:**  Dave
-**Run Start Date:**
+**Runner:**  Dave Case  
+**Run Start Date:** 22nd April 2023  
+**Run Completion Date:**
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| <placeholder>   |   |              |     |      |
+
+### JDMA Batch Numbers
+<Add output from running jdma batch | grep u-cw356 when run completed>
