--- a/docs/u-cw342.md
+++ b/docs/u-cw342.md
@@ -1,9 +1,17 @@
 # u-cw342 - HIST2 Ensemble Member 09
 
-**Runner:**  Annette 
+**Runner:**  Annette Osprey
 
 **Run Start Date:**
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
-|    |   |             |     |
+**Run Completion Date:**
+
+### Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| <placeholder>   |   |             |     |      |
+
+### JDMA Batch Numbers
+
+<Add output from running jdma batch | grep u-cw342 when run completed>
