--- a/docs/u-cw343.md
+++ b/docs/u-cw343.md
@@ -1,7 +1,13 @@
-# u-cw342 - HIST2 Ensemble Member 10
+# u-cw343 - HIST2 Ensemble Member 10
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Rosalyn Hatcher
+**Run Start Date:** 
+**Run Completion Date:**
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+### Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| <placeholder>   |   |          |     |      |
+
+### JDMA Batch Numbers
