--- a/docs/u-cw085.md
+++ b/docs/u-cw085.md
@@ -1,7 +1,15 @@
 # u-cw085 - HIST2 Ensemble Member 08
 
-**Runner:**  Weronika
-**Run Start Date:**
+**Runner:**  Weronika  
+**Run Start Date:**  
+**Run Completion Date:**
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+### Events/Notes
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| <placeholder> |      |    |      |      |
+
+### JDMA Batch Numbers
+
+<Add output from running jdma batch | grep u-cw085 when run completed>
