--- a/docs/u-cw343.md
+++ b/docs/u-cw343.md
@@ -1,13 +1,14 @@
 # u-cw343 - HIST2 Ensemble Member 10
 
-**Runner:**  Rosalyn Hatcher
-**Run Start Date:** 
+**Runner:**  Rosalyn Hatcher  
+**Run Start Date:**  05th May 2023
 **Run Completion Date:**
 
 ### Events/Notes
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| <placeholder>   |   |          |     |      |
+| 19511001   | coupled  |  Last coupled task run before ARCHER2 OS upgrade     |  Suite Paused   |  05.05.23  |
+| 19520101 | - | Suite updated as per os upgrade instructions | Suite Restarted | 04.07.23 |
 
 ### JDMA Batch Numbers
