--- a/docs/u-cw083.md
+++ b/docs/u-cw083.md
@@ -8,7 +8,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| <placeholder>   |   |              |     |      |
+|  19550401T0000Z  |   |    last completed coupled job          |  suite stopped   |      |
 
 ### JDMA Batch Numbers
 <Add output from running jdma batch | grep u-cw356 when run completed>
