--- a/docs/u-cv827.md
+++ b/docs/u-cv827.md
@@ -8,7 +8,8 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---- |
-| <placeholder>|   |          |     |    |
+| 19711001|  coupled   |    Last coupled task run before ARCHER2 OS upgrade    |  Suite Paused     | 08.05.23  |
+| 19720101| - |Suite updated as per os upgrade instructions| | |
 
 ### JDMA Batch Numbers
 
