--- a/docs/u-cw342.md
+++ b/docs/u-cw342.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Annette Osprey
 
-**Run Start Date:**
+**Run Start Date:** 24 April 2023
 
 **Run Completion Date:**
 
@@ -10,7 +10,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| <placeholder>   |   |             |     |      |
+| 19541001T0000Z | - | Last completed coupled cycle before A2 O/S upgrade | Suite paused | 18.05.23 |
 
 ### JDMA Batch Numbers
 
