--- a/docs/u-cw342.md
+++ b/docs/u-cw342.md
@@ -11,6 +11,7 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 | 19541001T0000Z | - | Last completed coupled cycle before A2 O/S upgrade | Suite paused | 18.05.23 |
+| 19550101T0000Z | - | Suite restarted as per instructions | Suite restarted | 06.07.23 |
 
 ### JDMA Batch Numbers
 
