--- a/docs/u-cw345.md
+++ b/docs/u-cw345.md
@@ -17,4 +17,4 @@
 
 <Add output from running `jdma batch | grep u-cw345` when run completed>
 
-
+last completed cycle pre ARCHER2 OS upgrade: 19701001T0000Z
