Update for archer2 OS upgrade

--- a/docs/u-cw356.md
+++ b/docs/u-cw356.md
@@ -8,7 +8,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| placeholder    |    |    |    |    |
+| 19690701T0000Z    |    | Last completed coupled cycle before ARCHER2 OS Upgrade   | Suite Paused   | 09.05.23   |
 
 ### JDMA Batch Numbers
 
