--- a/docs/u-cw356.md
+++ b/docs/u-cw356.md
@@ -9,6 +9,7 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 | 19690701T0000Z    |    | Last completed coupled cycle before ARCHER2 OS Upgrade   | Suite Paused   | 09.05.23   |
+| 19691001T0000Z    |    | Suite updated as per OS upgrade instructions | Suite Restarted | 07.07.23 |
 
 ### JDMA Batch Numbers
 
