Add failure comment

--- a/docs/u-cy376.md
+++ b/docs/u-cy376.md
@@ -1,14 +1,14 @@
 # u-cy376 - HIST2 Ensemble Member 12
 
 **Runner:**  Rosalyn Hatcher  
-**Run Start Date:**  
+**Run Start Date:**  19/07/23  
 **Run Completion Date:**
 
 ### Events/Notes
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-|    | coupled  |      |     |  0  |
+| 19650101 | coupled  | EC_BICGSTAB - NaNs in error term in BiCGstab after 1 iteration | Perturbed theta in dump & retriggered task |  31.07.23  |
 |  | - |  |  |  |
 
 ### JDMA Batch Numbers
