--- a/docs/u-cy376.md
+++ b/docs/u-cy376.md
@@ -12,6 +12,8 @@
 |  | - |  |  |  |
 
 ### Run Log
+* Model Crash in cycle 19650101T0000Z
+  
 ~~~
 Atm_Step: Timestep   526738   Model time:   1965-03-27 20:30:00
 ALPHA: 0.550000000000000E+00
