--- a/docs/u-cw263.md
+++ b/docs/u-cw263.md
@@ -9,4 +9,6 @@
 last completed cycle before ARCHER2 software upgrade: 18700101T0000Z
 
 | Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| 1870-01 | - | last completed cycle before ARCHER2 software upgrade | - | ? |
 | 1896-01 | jdma | unparseable response | checked jdma request completed for this batch | 2023-08-03 |
