--- a/docs/u-cw083.md
+++ b/docs/u-cw083.md
@@ -9,6 +9,8 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 |  19550401T0000Z  |   |    last completed coupled job          |  suite stopped   |      |
+|  19630401T0000Z  |   |    JDMA - error but seems to have PUT  |  Set complete    |      |
+|  19680401T0000Z  |   |    JDMA - error but seems to have PUT  |  Set complete    |      |
 
 ### JDMA Batch Numbers
 <Add output from running jdma batch | grep u-cw356 when run completed>
