Add comment re missing parent_source_id

--- a/docs/u-cy376.md
+++ b/docs/u-cy376.md
@@ -9,7 +9,7 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 | 19650101 | coupled  | EC_BICGSTAB - NaNs in error term in BiCGstab after 1 iteration. <br> Atm_Step: Timestep   526738 <br>  Model time:   1965-03-27 20:30:00| Perturbed theta in dump & retriggered task |  31.07.23  |
-|  | - |  |  |  |
+| 19770101  | - | Missing 'parent_source_id' discovered in suite metadata | 'parent_source_id' added and suite reloaded | 10.08.23 |
 
 ### Run Log
 * Model Crash in cycle 19650101T0000Z
