--- a/docs/u-cy879.md
+++ b/docs/u-cy879.md
@@ -8,6 +8,6 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| - | -  | -| - |  -  |
+| 19550401 | Coupled/Postproc  | Slurm/Cylc got in a pickle and coupled task from 195504 ran twice while at the same time coupled from 19907 ran.  Ended up with a corrupt cice file: cice_cy879i_1m_19550501-19550601.nc | Backtracked and restarted suite from 19550101 |  22/08/23  |
 
 ### JDMA Batch Numbers
