--- a/docs/u-cw264.md
+++ b/docs/u-cw264.md
@@ -1,1 +1,2 @@
 last completed cycle pre ARCHER2 OS upgrade: 18680101T0000Z
+ran pptransfer on the command line for /work/n02/n02/grenvill/cylc-run/u-cw264/share/cycle/19290101T0000Z
