--- a/docs/u-cw263.md
+++ b/docs/u-cw263.md
@@ -1,8 +1,8 @@
 # u-cw0263 - HIST1 Ensemble Member (realization index 21)
 
 **Runner:**  Reinhard  
-**Run Start Date:**  
-**Run Completion Date:**
+**Run Start Date:** 2023-04-19
+**Run Completion Date:** 2023-04-30
 
 ### Events/Notes
 
@@ -12,3 +12,4 @@ last completed cycle before ARCHER2 software upgrade: 18700101T0000Z
 | ---   | ---  | ---             | ---    | ---  |
 | 1870-01 | - | last completed cycle before ARCHER2 software upgrade | - | ? |
 | 1896-01 | jdma | unparseable response | checked jdma request completed for this batch | 2023-08-03 |
+
