--- a/docs/u-cy811.md
+++ b/docs/u-cy811.md
@@ -8,8 +8,8 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---- |
-
+|19521001T0000Z| Storm_analysis and monitor | post-proc was triggered to run before coupled completed and so not all the data was available for both tasks to complete. | We re-ran post-proc and modify_netcdf_metadata, and copied dumps from the later cycle (19530101T0000Z), before re-running storm_analysis, pptransfer, and then monitor. All completed successfully and so we released the rest of the suite. | 27/09/23 |
 
 ### JDMA Batch Numbers
 
-<Add output from running `jdma batch | grep u-cv827` when run completed>
+<Add output from running `jdma batch | grep u-cv811` when run completed>
