--- a/docs/u-cw264.md
+++ b/docs/u-cw264.md
@@ -1,5 +1,8 @@
 last completed cycle pre ARCHER2 OS upgrade: 18680101T0000Z
 ran pptransfer on the command line for /work/n02/n02/grenvill/cylc-run/u-cw264/share/cycle/19290101T0000Z
 
+### Notes/Events
+
 | Cycle | Task | Comment / Issue | Action |
+| ---  | --- | --- | --- |
 |  19450101T0000Z  | coupled | model failure  | perturbed cw264a.da19450101_00 |
