--- a/docs/u-cy881.md
+++ b/docs/u-cy881.md
@@ -10,7 +10,8 @@
 | ---   | ---  | ---             | ---    | ---- |
 | 19541001|  coupled   |    Last coupled task run before ARCHER2 maintennance shutdown   |  Suite Paused     | 14.09.23  |
 | 19570401| - |cycle failed - somehow postproc was triggered at the wrong time and CICE data was lost| Investigating | 26.09.23 |
-
+|19570401| - | Due to tidy up, files were lost, so we had to roll back to 195610 and restart there - this worked!| | 04.10.23|
+|19660401|  coupled  |   failed due to "North/South halos too small for advection." - needed perturbing - used Grenville's script - worked!| 24.10.23|
 
 
 
