--- a/docs/u-db291.md
+++ b/docs/u-db291.md
@@ -8,7 +8,7 @@ u-db291 - HIST2 Ensemble Member 26
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---- |
-
+| 19670401T0000Z    | All |  Job stopped and cylc aborted for some reason. Attempted restart but accidently restarted from 195001. Fortunately hit cancel before too much dammage        | Had to Warm Start from 196704 after fixing XML files. Seem OK  | 12/01/2024 |
 
 
 
