--- a/docs/u-cy811.md
+++ b/docs/u-cy811.md
@@ -11,6 +11,8 @@
 |19521001T0000Z| Storm_analysis and monitor | post-proc was triggered to run before coupled completed and so not all the data was available for both tasks to complete. | We re-ran post-proc and modify_netcdf_metadata, and copied dumps from the later cycle (19530101T0000Z), before re-running storm_analysis, pptransfer, and then monitor. All completed successfully and so we released the rest of the suite. | 27/09/23 |
 
 ### JDMA Batch Numbers
+```
+(jdma_venv_py2) [jrobson@sci6.jasmin.ac.uk ~]$ jdma batch | grep u-cy811
     9158 jrobson          canari           u-cy811/19500101 elastictape      2023-09-14 15:36  ON_STORAGE
     9163 jrobson          canari           u-cy811/19500401 elastictape      2023-09-15 10:10  ON_STORAGE
     9183 jrobson          canari           u-cy811/19500701 elastictape      2023-09-17 12:17  ON_STORAGE
@@ -271,5 +273,5 @@
    15175 jrobson          canari           u-cy811/20140401 elastictape      2024-01-20 01:40  ON_STORAGE
    15200 jrobson          canari           u-cy811/20140701 elastictape      2024-01-20 10:47  ON_STORAGE
    15230 jrobson          canari           u-cy811/20141001 elastictape      2024-01-20 19:03  ON_STORAGE
-
+```
    
