--- a/docs/hist2/1-cv575.md
+++ b/docs/hist2/1-cv575.md
@@ -4,8 +4,11 @@
 
 **Run Start Date:** 21st March 2023
 
+**Run Completion Date:** 19th July 2023
+
 | Cycle | Task | Comment / Issue | Action |
 | ---   | ---  | ---             | ---    |
+| -     | -    | Suite updated as per os upgrade instructions | Suite Restarted | 
 
 ### JDMA batch numbers
 ```
