Add completion date

--- a/docs/hist2/12-cy376.md
+++ b/docs/hist2/12-cy376.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Rosalyn Hatcher  
 **Run Start Date:**  19/07/23  
-**Run Completion Date:**
+**Run Completion Date:** 11/09/23
 
 ### Events/Notes
 
