--- a/docs/hist2/15-cy866.md
+++ b/docs/hist2/15-cy866.md
@@ -1,7 +1,12 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-cy866 - HIST2 Ensemble Member 15
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Andrea Dittus  
+**Run Start Date:** 25/09/23  
+**Run Completion Date:** 
+
+## Notes/Events
 
 | Cycle | Task | Comment / Issue | Action |
 | ---   | ---  | ---             | ---    |
+
+## JDMA Batch Numbers
