--- a/docs/hist2/18-cy879.md
+++ b/docs/hist2/18-cy879.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Rosalyn Hatcher  
 **Run Start Date:**  14th August 2023  
-**Run Completion Date:** 
+**Run Completion Date:** 3rd November 2023
 
 ### Events/Notes
 
