--- a/docs/hist2/19-cy880.md
+++ b/docs/hist2/19-cy880.md
@@ -1,7 +1,12 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-cy880 - HIST2 Ensemble Member 19
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Charlotte Lang  
+**Run Start Date:** 27/09/23  
+**Run Completion Date:**  
+
+## Notes/Events
 
 | Cycle | Task | Comment / Issue | Action |
 | ---   | ---  | ---             | ---    |
+
+## JDMA Batch Numbers
