--- a/docs/hist2/20-cy881.md
+++ b/docs/hist2/20-cy881.md
@@ -1,4 +1,4 @@
- u-cy881 - HIST2 Ensemble Member 20
+# u-cy881 - HIST2 Ensemble Member 20
 
 **Runner:**  Dan Hodson  
 **Run Start Date:**  02nd September 2023  
