--- a/docs/hist2/23-da191.md
+++ b/docs/hist2/23-da191.md
@@ -1,7 +1,14 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-da191 - HIST2 Ensemble Member 23
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Simon Wilson  
+**Run Start Date:** 17/10/23
+**Run Completion Date:**  
+
+## Notes/Events
 
 | Cycle | Task | Comment / Issue | Action |
 | ---   | ---  | ---             | ---    |
+
+## JDMA Batch Numbers
+
+Insert output from running: `jdma batch -f workspace -w canari | grep u-da179 | grep ON_STOR | cat -n`
