--- a/docs/hist2/25-da193.md
+++ b/docs/hist2/25-da193.md
@@ -6,8 +6,9 @@
 
 ## Notes/Events
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| -   | -  | -         | -   | -  |
 
 ## JDMA Batch Numbers
 
