--- a/docs/hist2/25-da193.md
+++ b/docs/hist2/25-da193.md
@@ -8,7 +8,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| <cycle-point> | -    | -               | -      | -    |
+| \<cycle-point> | -    | -               | -      | -    |
 
 ## JDMA Batch Numbers
 
