--- a/docs/hist2/26-db291.md
+++ b/docs/hist2/26-db291.md
@@ -1,4 +1,4 @@
-u-db291 - HIST2 Ensemble Member 26
+# u-db291 - HIST2 Ensemble Member 26
 
 **Runner:**  Dan Hodson  
 **Run Start Date:**  21st November 2023  
