--- a/docs/hist2/27-db301.md
+++ b/docs/hist2/27-db301.md
@@ -1,7 +1,19 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-db301 - HIST2 Ensemble Member 27
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Jon Robson  
+**Run Start Date:** 21/11/23  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| None  |      |                 |        |      |
+
+## JDMA Batch Numbers
+
+Add output from running:
+
+```
+jdma batch -f workspace -w canari | grep u-db301 | grep ON_STOR | cat -n
+```
