--- a/docs/hist2/3-cw345.md
+++ b/docs/hist2/3-cw345.md
@@ -1,9 +1,9 @@
 # u-cw345 - HIST2 Ensemble Member 03
 
-**Runner:**  Grenville Lister
+**Runner:**  Grenville Lister  
 
 **Run Start Date:** 21st April 2023  
-**Run Completion Date:**
+**Run Completion Date:** 2st August 2023
 
 **General Notes:** Copy of [u-cv608](u-cv608) with ocean metadata fix
 
