--- a/docs/hist2/36-dd436.md
+++ b/docs/hist2/36-dd436.md
@@ -1,7 +1,15 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-dd436 - HIST2 Ensemble Member 36
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Reinhard Schiemann  
+**Run Start Date:**  09/02/2023  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+* Contains additional NEMO/CICE data request
+  
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+|placeholder   | -  | -            | -    | -  |
+
+## JDMA Batch Numbers
