--- a/docs/hist2/37-dd438.md
+++ b/docs/hist2/37-dd438.md
@@ -1,7 +1,15 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-dd438 - HIST2 Ensemble Member 37
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Robin Smith  
+**Run Start Date:**  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+* Contains additional NEMO/CICE data request
+  
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| placeholder   | -  | -             | -    | -  |
+
+## JDMA Batch Numbers
