--- a/docs/hist2/38-dd439.md
+++ b/docs/hist2/38-dd439.md
@@ -1,7 +1,16 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-dd439 - HIST2 Ensemble Membe 38
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Jenny Mecking  
+**Run Start Date:**  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+* Contains additional NEMO/CICE data request
+  
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| placeholder   | -  | -             | -    | -  |
+
+## JDMA Batch Numbers
+
