--- a/docs/hist2/39-dd441.md
+++ b/docs/hist2/39-dd441.md
@@ -1,7 +1,15 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-dd441 - HIST2 Ensemble Member 39
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Annette Osprey  
+**Run Start Date:** 15 February 2024  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+* Contains additional NEMO/CICE data request
+  
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| placeholder   | -  | -             | -    | -  |
+
+## JDMA Batch Numbers
