--- a/docs/hist2/4-cw356.md
+++ b/docs/hist2/4-cw356.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Jeff Cole  
 **Run Start Date:** 24th April 2023  
-**Run Completion Date:**  
+**Run Completion Date:**  3rd September 2023
 
 ### Events/Notes
 
