--- a/docs/hist2/40-dd442.md
+++ b/docs/hist2/40-dd442.md
@@ -1,7 +1,15 @@
-# \<insert suiteid> - HIST2 Ensemble Member \<insert ens member num>
+# u-dd442 - HIST2 Ensemble Member 40
 
-**Runner:**  
-**Run Start Date:**
+**Runner:**  Rosalyn Hatcher  
+**Run Start Date:** 14 February 2024  
+**Run Completion Date:**  
 
-| Cycle | Task | Comment / Issue | Action |
-| ---   | ---  | ---             | ---    |
+## Notes/Events
+
+* Contains additional NEMO/CICE data request
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| placeholder   | -  | -             | -    | -  |
+
+## JDMA Batch Numbers
