--- a/docs/hist2/5-cv827.md
+++ b/docs/hist2/5-cv827.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Dan Hodson  
 **Run Start Date:**  19th April 2023  
-**Run Completion Date:**
+**Run Completion Date:** 25th August 2023
 
 ### Events/Notes
 
