--- a/docs/hist2/3-cw345.md
+++ b/docs/hist2/3-cw345.md
@@ -11,11 +11,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| placeholder |      |       |       |      |
-
-
-
-last completed cycle pre ARCHER2 OS upgrade: 19701001T0000Z
+| 19701001T0000Z |      |  Last completed cycle pre ARCHER2 OS Upgrade     |       |      |
 
 ### JDMA Batch Numbers
 ```
