--- a/docs/hist2/40-dd442.md
+++ b/docs/hist2/40-dd442.md
@@ -10,6 +10,11 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| placeholder   | -  | -             | -    | -  |
+| 19660101   | coupled  |  ===>>> : E R R O R
+         ===========
+
+  stpctl: the zonal velocity is larger than 20 m/s
+  ====== 
+ kt=554707 max abs(U):   199.1    , i j k:   377  977   13             | Perturb atoms dump    | 28/02/24  |
 
 ## JDMA Batch Numbers
