--- a/docs/hist2/26-db291.md
+++ b/docs/hist2/26-db291.md
@@ -10,6 +10,7 @@
 | ---   | ---  | ---             | ---    | ---- |
 | 19670401T0000Z    | All |  Job stopped and cylc aborted for some reason. Attempted restart but accidently restarted from 195001. Fortunately hit cancel before too much dammage        | Had to Warm Start from 196704 after fixing XML files. Seem OK  | 12/01/2024 |
 | 19670101T0000Z    | All | Error in last warm start - forgot to update the ensemble member in the iodef_nemo.xml file! Need to warmstart from earlier as the nemo/cice restarts had gone  | Had to Warm Start from 196701 after fixing XML files. Seem OK  | 24/01/2024 |
+| 199010101T0000Z   | coupled | Error message: North/South halos too small for advection. | perturbed the 1990101 atmosphere dump using submit_perturb.slurm and resubmitted | 12/03/2024|
 
 
 
