--- a/docs/ssp3/2-de436.md
+++ b/docs/ssp3/2-de436.md
@@ -1,5 +1,17 @@
-# u-de436
+# u-de436 - SSP3-7.0 Ensemble Member 02
 
-Suite Runner: Rosalyn Hatcher  
-Run Start Date: 12th March 2024  
-Run Completion Date: 
+**Runner:** Rosalyn Hatcher  
+**Run Start Date:** 12th March 2024  
+**Run Completion Date:** 
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+| -     | -    |  |  |  |
+
+### JDMA batch numbers
+```
+ Output from running: jdma batch -f workspace -w canari | grep u-de436 | cat -n
+```
+
+
+
