--- a/docs/hist2/33-cz647.md
+++ b/docs/hist2/33-cz647.md
@@ -10,7 +10,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| placeholder   |  |            |     |   |
+|  20060101T0000Z | coupled | Instability in atmos | Perturbed atmos restart | 28.11.23 |
 
 ### JDMA Batch Numbers
 ```
