--- a/docs/hist2/39-dd441.md
+++ b/docs/hist2/39-dd441.md
@@ -10,6 +10,6 @@
   
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| placeholder   | -  | -             | -    | -  |
+| 19730401T0000Z | coupled | Model instability in atmos | Perturbed atmos restart | 09.03.24 |
 
 ## JDMA Batch Numbers
