--- a/docs/hist2/39-dd441.md
+++ b/docs/hist2/39-dd441.md
@@ -11,5 +11,6 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 | 19730401T0000Z | coupled | Model instability in atmos | Perturbed atmos restart | 09.03.24 |
+| 19940101T0000Z | coupled | Model instability in atmos | Perturbed atmos restart | 06.04.24 |
 
 ## JDMA Batch Numbers
