--- a/docs/hist2/36-dd436.md
+++ b/docs/hist2/36-dd436.md
@@ -2,7 +2,7 @@
 
 **Runner:**  Reinhard Schiemann  
 **Run Start Date:**  09/02/2023  
-**Run Completion Date:**  
+**Run Completion Date:**  01/05/2024
 
 ## Notes/Events
 
