--- a/docs/ssp370/5-df220.md
+++ b/docs/ssp370/5-df220.md
@@ -6,7 +6,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| -     | -    |  |  |  |
+| 20440101 | coupled   | ocean fail | perturb atmos dump  | 20/05/24  |
 
 ### JDMA batch numbers
 ```
