Update event log

--- a/docs/ssp370/10-de851.md
+++ b/docs/ssp370/10-de851.md
@@ -6,7 +6,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| -     | -    |  |  |  |
+| 20770101T0000Z     | coupled    | `Error message: North/South halos too small for advection` | Perturbed atmos dump | 11.05.24 |
 
 ### JDMA batch numbers
 ```
