--- a/docs/ssp370/21-df933.md
+++ b/docs/ssp370/21-df933.md
@@ -10,5 +10,5 @@
 
 ### JDMA batch numbers
 ```
- Output from running: jdma batch -f workspace -w canari | grep u-df933 | cat -n
+ Output from running: jdma batch -f workspace -w canari | grep u-df933 | grep ON_STOR | cat -n
 ```
