--- a/docs/ssp370/12-de937.md
+++ b/docs/ssp370/12-de937.md
@@ -5,8 +5,8 @@
 **Run Completion Date:** 
 
 | Cycle | Task | Comment / Issue | Action | Date |
-| ---   | ---  | ---             | ---    | ---  |
-| -     | -    |  |  |  |
+|  20340101T0000Z  | coupled  | stpctl: the zonal velocity is larger than 20 m/s (in ocean.output) | perturbed start dump de937a.da20340101_00 with submit_perturb.slurm (calling $UMDIR/scripts/perturb_theta.py), then re-triggered | 22/05/2024 |
+
 
 ### JDMA batch numbers
 ```
