--- a/docs/ssp370/9-de850.md
+++ b/docs/ssp370/9-de850.md
@@ -6,7 +6,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| -     | -    |  |  |  |
+| 20540101T0000Z    | coupled   | Failed. Perturbed de850a.da20540101_00 to make the task succeed  |  | 10/07/2024 |
 
 ### JDMA batch numbers
 ```
