--- a/docs/ssp370/4-de815.md
+++ b/docs/ssp370/4-de815.md
@@ -1,12 +1,13 @@
 # u-de815 - SSP3-7.0 Ensemble Member 04
 
-**Runner:** Reinhard Schiemann  
-**Run Start Date:**  
+**Runner:** Jeff Cole  
+**Run Start Date:**  22 March 2024  
 **Run Completion Date:** 
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| -     | -    |  |  |  |
+| 20690101T0000Z     | coupled    | `Error message: North/South halos too small for advection` | Perturbed atmos dump | 09.07.24 |
+
 
 ### JDMA batch numbers
 ```
