--- a/docs/hist2/38-dd439.md
+++ b/docs/hist2/38-dd439.md
@@ -1,8 +1,8 @@
-# u-dd439 - HIST2 Ensemble Membe 38
+# u-dd439 - HIST2 Ensemble Member 38
 
 **Runner:**  Jenny Mecking  
-**Run Start Date:**  23.02.2024
-**Run Completion Date:**  09.07.24
+**Run Start Date:**  23.02.2024  
+**Run Completion Date:**  09.07.2024
 
 ## Notes/Events
 
