--- a/docs/ssp370/33-di513.md
+++ b/docs/ssp370/33-di513.md
@@ -1,1 +1,13 @@
+# u-di513 - SSP3-7.0 Ensemble Member 33
 
+**Runner:** Grenville Lister    
+**Run Start Date:**  12 Aug 2024
+**Run Completion Date:** 
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+
+
+### JDMA batch numbers
+```
+ Output from running: jdma batch -f workspace -w canari | grep u-di513 | cat -n
