--- a/docs/ssp370/34-di514.md
+++ b/docs/ssp370/34-di514.md
@@ -1,1 +1,13 @@
+# u-di514 - SSP3-7.0 Ensemble Member 34
 
+**Runner:** Grenville Lister    
+**Run Start Date:**  13 Aug 2024
+**Run Completion Date:** 
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+
+
+### JDMA batch numbers
+```
+ Output from running: jdma batch -f workspace -w canari | grep u-di514 | cat -n
