--- a/docs/ssp370/23-df395.md
+++ b/docs/ssp370/23-df395.md
@@ -1,1 +1,14 @@
 
+# u-df935 - SSP3-7.0 Ensemble Member 23
+
+**Runner:** Grenville Lister    
+**Run Start Date:**  27 June 2024
+**Run Completion Date:** 
+
+| Cycle | Task | Comment / Issue | Action | Date |
+| ---   | ---  | ---             | ---    | ---  |
+|
+
+### JDMA batch numbers
+```
+ Output from running: jdma batch -f workspace -w canari | grep u-df935 | cat -n
