--- a/docs/ssp370/3-de724.md
+++ b/docs/ssp370/3-de724.md
@@ -6,7 +6,7 @@
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| - 20690101    | -    | de724a_3_day_z__206903-206903.nc wqs corrupt on tape | model reran | 24 Sept 2024 |
+| - 20690101    | -    | de724a_3_day_z__206903-206903.nc was corrupt on tape | model reran, batch 26030 deleted, 34034 added | 24 Sept 2024 |
 
 ### JDMA batch numbers
 ```
