--- a/docs/ssp370/36-di703.md
+++ b/docs/ssp370/36-di703.md
@@ -2,7 +2,7 @@
 
 **Runner:** Jeff Cole  
 **Run Start Date:**  13 August 2024  
-**Run Completion Date:** 
+**Run Completion Date:**  06 November 2024
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
