--- a/docs/ssp370/33-di513.md
+++ b/docs/ssp370/33-di513.md
@@ -2,7 +2,7 @@
 
 **Runner:** Grenville Lister    
 **Run Start Date:**  12 Aug 2024
-**Run Completion Date:** 
+**Run Completion Date:** 12 Oct 2024
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
