--- a/docs/ssp370/26-dh412.md
+++ b/docs/ssp370/26-dh412.md
@@ -2,7 +2,7 @@
 
 **Runner:** Jenny Mecking     
 **Run Start Date:**  10 July 2024  
-**Run Completion Date:** 
+**Run Completion Date:** 08 October 2024
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
@@ -11,7 +11,6 @@
 ### JDMA batch numbers
 ```
  Output from running: jdma batch -f workspace -w canari | grep u-dh412 | grep ON_STOR | cat -n
-```
      1	   25583 jmecking001      canari           u-dh412/20150101 elastictape      2024-07-11 15:31  ON_STORAGE 
      2	   25586 jmecking001      canari           u-dh412/20150401 elastictape      2024-07-11 15:36  ON_STORAGE 
      3	   25588 jmecking001      canari           u-dh412/20150701 elastictape      2024-07-11 15:41  ON_STORAGE 
@@ -352,3 +351,4 @@
    338	   34208 jmecking001      canari           u-dh412/20990401 elastictape      2024-09-25 18:46  ON_STORAGE 
    339	   34223 jmecking001      canari           u-dh412/20990701 elastictape      2024-09-27 02:40  ON_STORAGE 
    340	   35233 jmecking001      canari           u-dh412/20991001 elastictape      2024-10-08 12:42  ON_STORAGE
+```
