--- a/docs/ssp370/38-di705.md
+++ b/docs/ssp370/38-di705.md
@@ -1,7 +1,7 @@
 
 # u-di705 - SSP3-7.0 Ensemble Member 38
 
-**Runner:** Rosalyn Hatcher  
+**Runner:** Annette Osprey    
 **Run Start Date:**  20 August 2024  
 **Run Completion Date:**  20 October 2024
 
