--- a/docs/hist2/8-cy436.md
+++ b/docs/hist2/8-cy436.md
@@ -22,7 +22,7 @@ JDMA Batchid 6768 for cycle 19500101 contains incorrectly named cice files:
 19500101T0000Z/cice_cy436i_1m_19500201-19500301.nc
 19500101T0000Z/cice_cy436i_1m_19500301-19500401.nc
 ```
-file names corrected im batch 38296
+file names corrected in batch 38296
 
 
 ```
