--- a/docs/ssp370/26-dh412.md
+++ b/docs/ssp370/26-dh412.md
@@ -7,7 +7,7 @@
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
 | -     | -    | dh412o_26_mon__grid_V_201812-201812.nc has bad data | need to rerun 2018 | 27/11/2024  |
-| 20181001 | --- | batch 26021 deleted becuase of data corruption, model rerun, data fixed but I failed to upload it! |
+| 20181001 | --- | batch 26021 deleted because of data corruption, model rerun, data fixed but I failed to upload it! |
 
 ### JDMA batch numbers
 ```
